--- a/layout/css/admin.css
+++ b/layout/css/admin.css
@@ -1,3 +1,4 @@
+
 #sidebar{
     border-right: 1px solid #d7d1d1;
 }
@@ -58,4 +59,139 @@
 .btn-time-sort{
     display: inline-block;
     max-width: 100px;
+}
+
+.week-block{
+    width: 123px;
+    height: 67px;
+    background-color: #f78620;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-size: 14px;
+    display: inline-block;
+}
+
+.day-block{
+    margin-right: 15px;
+    display: inline-block;
+    color: #A65F00;
+    font-size: 20px;
+    width: 80px;
+    cursor: pointer;
+}
+
+.m-15{
+    margin-right: 15px;
+}
+
+.triangle-left{
+    border: 30px solid transparent;
+    border-right: 40px solid #f78620;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    cursor: pointer;
+}
+
+.triangle-right{
+    border: 30px solid transparent;
+    border-right: 40px solid #F78620;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    transform: rotate(180deg);
+    cursor: pointer;
+
+}
+
+.date-block{
+    font-size: 30px;
+    color: #A65F00;
+}
+
+.shift {
+    max-width: 350px;
+    min-height: 400px;
+    display: inline-block;
+    background-color: #E0C7A4;
+}
+
+.b-v{
+    background-color: #FAFF00;
+    border-radius: 50%;
+}
+
+.b-add{
+    background-color: #2E9E4E;
+    border-radius: 50%;
+}
+
+.b-del{
+    background-color: #E91717;
+    border-radius: 50%;
+}
+
+
+.dropbtn {
+    cursor: pointer;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    max-height: 350px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 5px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+
+#night-shift, #day-shift{
+    list-style-type: none;
+}
+
+.active-week{
+    background-color: #FFD092;
+}
+
+.active-day{
+    border-radius: 20px;
+    background-color: #FFD092;
+}
+
+#week-blocks{
+    display: inline-block;
+}
+
+.btn-save{
+    width: 200px;
+}
+
+@media screen and (max-width: 992px) {
+    .triangle-left{
+        transform: rotate(90deg);
+        margin-bottom: 50px;
+    }
+
+    .triangle-right{
+        transform: rotate(270deg);
+        margin-top: 50px;
+    }
 }
